[gd_scene load_steps=8 format=3 uid="uid://5lq7qwq8odor"]

[ext_resource type="Texture2D" uid="uid://iaumk5tbsbn1" path="res://images/tile_24x24_I_opaque.png" id="1_5piyg"]
[ext_resource type="Script" path="res://Editor.gd" id="1_jy0y8"]
[ext_resource type="Script" path="res://PlacableTileEditor.gd" id="2_yidxy"]
[ext_resource type="Texture2D" uid="uid://c6klyd06qogb" path="res://images/tile_24x24_anti_opaque.png" id="3_0b8ah"]
[ext_resource type="TileSet" uid="uid://b64fhmdc5bn5" path="res://images/tile_map.tres" id="3_dhhqi"]
[ext_resource type="Script" path="res://EditorTileMap.gd" id="5_htd13"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_1pntj"]

[node name="Control" type="MarginContainer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_jy0y8")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 2

[node name="Tools" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="Place" type="Control" parent="VBoxContainer/Tools"]
layout_mode = 2
size_flags_horizontal = 6
size_flags_vertical = 4

[node name="Area2D" type="Area2D" parent="VBoxContainer/Tools/Place"]
scale = Vector2(3, 3)
script = ExtResource("2_yidxy")

[node name="CollisionShape2D" type="CollisionShape2D" parent="VBoxContainer/Tools/Place/Area2D"]
shape = SubResource("RectangleShape2D_1pntj")

[node name="StraightTile" type="Sprite2D" parent="VBoxContainer/Tools/Place/Area2D"]
texture = ExtResource("1_5piyg")

[node name="Delete" type="Control" parent="VBoxContainer/Tools"]
layout_mode = 2
size_flags_horizontal = 6
size_flags_vertical = 4

[node name="Area2D" type="Area2D" parent="VBoxContainer/Tools/Delete"]
scale = Vector2(3, 3)

[node name="CollisionShape2D" type="CollisionShape2D" parent="VBoxContainer/Tools/Delete/Area2D"]
shape = SubResource("RectangleShape2D_1pntj")

[node name="StraightTile" type="Sprite2D" parent="VBoxContainer/Tools/Delete/Area2D"]
texture = ExtResource("3_0b8ah")

[node name="Back" type="Button" parent="VBoxContainer/Tools"]
layout_mode = 2
size_flags_horizontal = 3
text = "Back"

[node name="Save" type="Button" parent="VBoxContainer/Tools"]
layout_mode = 2
size_flags_horizontal = 3
text = "Save
"

[node name="MarginContainer" type="MarginContainer" parent="VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 6
size_flags_stretch_ratio = 5.3

[node name="TileMap" type="TileMap" parent="VBoxContainer/MarginContainer"]
tile_set = ExtResource("3_dhhqi")
format = 2
layer_0/name = "background"
layer_0/tile_data = PackedInt32Array(196604, 458752, 0, 196605, 458752, 0, 196606, 458752, 0, 196607, 458752, 0, 131072, 458752, 0, 131073, 458752, 0, 131074, 458752, 0, 131075, 458752, 0, 65539, 458752, 0, 3, 458752, 0, -65533, 458752, 0, -131069, 458752, 0, -131070, 458752, 0, -131071, 458752, 0, -131072, 458752, 0, -65537, 458752, 0, -65538, 458752, 0, -65539, 458752, 0, -65540, 458752, 0, -4, 458752, 0, 65532, 458752, 0, 131068, 458752, 0, 131069, 458752, 0, 131070, 458752, 0, 131071, 458752, 0, 65536, 458752, 0, 65537, 458752, 0, 65538, 458752, 0, 2, 458752, 0, -65534, 458752, 0, -65535, 458752, 0, -65536, 458752, 0, -1, 458752, 0, -2, 458752, 0, -3, 458752, 0, 65533, 458752, 0, 65534, 458752, 0, 65535, 458752, 0, 0, 458752, 0, 1, 458752, 0, -131076, 458752, 0, -131075, 458752, 0, -131074, 458752, 0, -131073, 458752, 0, -196608, 458752, 0, -196607, 458752, 0, -196606, 458752, 0, -196605, 458752, 0)
layer_1/name = "tile"
layer_1/tile_data = PackedInt32Array()
layer_2/name = "tile_colour"
layer_2/tile_data = PackedInt32Array()
layer_3/name = "tile_hover"
layer_3/tile_data = PackedInt32Array()
script = ExtResource("5_htd13")

[connection signal="gui_input" from="." to="." method="_on_gui_input"]
[connection signal="input_event" from="VBoxContainer/Tools/Place/Area2D" to="VBoxContainer/Tools/Place/Area2D" method="_on_input_event"]
[connection signal="mouse_entered" from="VBoxContainer/Tools/Place/Area2D" to="VBoxContainer/Tools/Place/Area2D" method="_on_mouse_entered"]
[connection signal="mouse_exited" from="VBoxContainer/Tools/Place/Area2D" to="VBoxContainer/Tools/Place/Area2D" method="_on_mouse_exited"]
[connection signal="pressed" from="VBoxContainer/Tools/Back" to="." method="_on_back_pressed"]
