[gd_scene load_steps=12 format=3 uid="uid://5lq7qwq8odor"]

[ext_resource type="Script" path="res://game/editor/Editor.gd" id="1_8a3en"]
[ext_resource type="Script" path="res://game/PlacableTileEditor.gd" id="2_bj6nu"]
[ext_resource type="Texture2D" uid="uid://dh65qm2vqea6e" path="res://game/shared/graphics/images/tile_24x24_empty.png" id="3_v1bmv"]
[ext_resource type="Texture2D" uid="uid://iaumk5tbsbn1" path="res://game/shared/graphics/images/I/tile_24x24_I_opaque.png" id="4_k4n0r"]
[ext_resource type="Texture2D" uid="uid://b3vpg8gtgmms5" path="res://game/shared/graphics/images/input/tile_24x24_input_transparent.png" id="5_sv7j5"]
[ext_resource type="Texture2D" uid="uid://cd26s8grhji0j" path="res://game/shared/graphics/images/output/tile_24x24_output_partially_transparent.png" id="6_4cr30"]
[ext_resource type="Texture2D" uid="uid://dh2l8475cocg6" path="res://game/shared/graphics/images/tools/tile_24x24_eraser.png" id="7_u505k"]
[ext_resource type="Script" path="res://game/editor/EditorTileMap.gd" id="8_qugu2"]
[ext_resource type="TileSet" uid="uid://b64fhmdc5bn5" path="res://game/shared/graphics/tile_map.tres" id="9_o1xlw"]
[ext_resource type="Script" path="res://game/editor/color_preview.gd" id="10_41xc2"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_1pntj"]

[node name="Editor" type="MarginContainer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
focus_mode = 1
script = ExtResource("1_8a3en")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 2

[node name="Tools" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="Background" type="Control" parent="VBoxContainer/Tools"]
layout_mode = 2
size_flags_horizontal = 6
size_flags_vertical = 4

[node name="Area2D" type="Area2D" parent="VBoxContainer/Tools/Background"]
scale = Vector2(3, 3)
script = ExtResource("2_bj6nu")

[node name="CollisionShape2D" type="CollisionShape2D" parent="VBoxContainer/Tools/Background/Area2D"]
shape = SubResource("RectangleShape2D_1pntj")

[node name="BackgroundTile" type="Sprite2D" parent="VBoxContainer/Tools/Background/Area2D"]
texture = ExtResource("3_v1bmv")

[node name="Straight" type="Control" parent="VBoxContainer/Tools"]
layout_mode = 2
size_flags_horizontal = 6
size_flags_vertical = 4

[node name="Area2D" type="Area2D" parent="VBoxContainer/Tools/Straight"]
scale = Vector2(3, 3)
script = ExtResource("2_bj6nu")

[node name="CollisionShape2D" type="CollisionShape2D" parent="VBoxContainer/Tools/Straight/Area2D"]
shape = SubResource("RectangleShape2D_1pntj")

[node name="StraightTile" type="Sprite2D" parent="VBoxContainer/Tools/Straight/Area2D"]
texture = ExtResource("4_k4n0r")

[node name="Input" type="Control" parent="VBoxContainer/Tools"]
layout_mode = 2
size_flags_horizontal = 6
size_flags_vertical = 4

[node name="Area2D" type="Area2D" parent="VBoxContainer/Tools/Input"]
scale = Vector2(3, 3)
script = ExtResource("2_bj6nu")

[node name="CollisionShape2D" type="CollisionShape2D" parent="VBoxContainer/Tools/Input/Area2D"]
shape = SubResource("RectangleShape2D_1pntj")

[node name="InputTile" type="Sprite2D" parent="VBoxContainer/Tools/Input/Area2D"]
texture = ExtResource("5_sv7j5")

[node name="Output" type="Control" parent="VBoxContainer/Tools"]
layout_mode = 2
size_flags_horizontal = 6
size_flags_vertical = 4

[node name="Area2D" type="Area2D" parent="VBoxContainer/Tools/Output"]
scale = Vector2(3, 3)
script = ExtResource("2_bj6nu")

[node name="CollisionShape2D" type="CollisionShape2D" parent="VBoxContainer/Tools/Output/Area2D"]
shape = SubResource("RectangleShape2D_1pntj")

[node name="OutputTile" type="Sprite2D" parent="VBoxContainer/Tools/Output/Area2D"]
texture = ExtResource("6_4cr30")

[node name="Delete" type="Control" parent="VBoxContainer/Tools"]
layout_mode = 2
size_flags_horizontal = 6
size_flags_vertical = 4

[node name="Area2D" type="Area2D" parent="VBoxContainer/Tools/Delete"]
scale = Vector2(3, 3)
script = ExtResource("2_bj6nu")

[node name="CollisionShape2D" type="CollisionShape2D" parent="VBoxContainer/Tools/Delete/Area2D"]
shape = SubResource("RectangleShape2D_1pntj")

[node name="StraightTile" type="Sprite2D" parent="VBoxContainer/Tools/Delete/Area2D"]
texture = ExtResource("7_u505k")

[node name="Back" type="Button" parent="VBoxContainer/Tools"]
layout_mode = 2
size_flags_horizontal = 3
text = "Back"

[node name="Save" type="Button" parent="VBoxContainer/Tools"]
layout_mode = 2
size_flags_horizontal = 3
text = "Save
"

[node name="LevelName" type="LineEdit" parent="VBoxContainer"]
layout_mode = 2
placeholder_text = "level name"
alignment = 1
flat = true

[node name="TileMap" type="MarginContainer" parent="VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 6
size_flags_stretch_ratio = 5.3
script = ExtResource("8_qugu2")

[node name="tile_hover" type="TileMapLayer" parent="VBoxContainer/TileMap"]
modulate = Color(1, 1, 1, 0.498039)
use_parent_material = true
tile_set = ExtResource("9_o1xlw")

[node name="Popup" type="Popup" parent="."]
position = Vector2i(405, 220)

[node name="ColorPicker" type="VBoxContainer" parent="Popup"]
top_level = true
offset_right = 40.0
offset_bottom = 40.0
theme_override_constants/separation = 1

[node name="Red" type="HSlider" parent="Popup/ColorPicker"]
modulate = Color(1, 0, 0, 1)
layout_mode = 2
max_value = 1.0
step = 0.01

[node name="Yellow" type="HSlider" parent="Popup/ColorPicker"]
modulate = Color(1, 1, 0, 1)
layout_mode = 2
max_value = 1.0
step = 0.01

[node name="Blue" type="HSlider" parent="Popup/ColorPicker"]
modulate = Color(0, 0, 1, 1)
layout_mode = 2
max_value = 1.0
step = 0.01

[node name="ColorRect" type="ColorRect" parent="Popup/ColorPicker"]
custom_minimum_size = Vector2(20, 10)
layout_mode = 2
script = ExtResource("10_41xc2")

[node name="Confirm" type="Button" parent="Popup/ColorPicker"]
layout_mode = 2
text = "Confirm
"

[connection signal="input_event" from="VBoxContainer/Tools/Background/Area2D" to="VBoxContainer/Tools/Background/Area2D" method="_on_input_event" binds= [Vector2i(0, 0)]]
[connection signal="input_event" from="VBoxContainer/Tools/Straight/Area2D" to="VBoxContainer/Tools/Straight/Area2D" method="_on_input_event" binds= [Vector2i(1, 0)]]
[connection signal="input_event" from="VBoxContainer/Tools/Input/Area2D" to="VBoxContainer/Tools/Input/Area2D" method="_on_input_event" binds= [Vector2i(0, 1)]]
[connection signal="input_event" from="VBoxContainer/Tools/Output/Area2D" to="VBoxContainer/Tools/Output/Area2D" method="_on_input_event" binds= [Vector2i(1, 1)]]
[connection signal="input_event" from="VBoxContainer/Tools/Delete/Area2D" to="VBoxContainer/Tools/Delete/Area2D" method="_on_input_event" binds= [Vector2i(1, 4)]]
[connection signal="pressed" from="VBoxContainer/Tools/Back" to="." method="_on_back_pressed"]
[connection signal="pressed" from="VBoxContainer/Tools/Save" to="." method="_on_save_pressed"]
[connection signal="value_changed" from="Popup/ColorPicker/Red" to="Popup/ColorPicker/ColorRect" method="_on_value_changed"]
[connection signal="value_changed" from="Popup/ColorPicker/Yellow" to="Popup/ColorPicker/ColorRect" method="_on_value_changed"]
[connection signal="value_changed" from="Popup/ColorPicker/Blue" to="Popup/ColorPicker/ColorRect" method="_on_value_changed"]
[connection signal="pressed" from="Popup/ColorPicker/Confirm" to="VBoxContainer/TileMap" method="_on_confirm_color_pressed"]
